--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -158,16 +158,19 @@ body {
         }
     }
 }
+
 .courses__main {
     grid-column-gap: 0px !important;
     grid-row-gap: 0px !important;
+
     .block {
         .inside__block {
             border-radius: 10px;
-            box-shadow: 1px 3px 8px 6px rgba(0,0,0,.14);
+            box-shadow: 1px 3px 8px 6px rgba(0, 0, 0, .14);
         }
-    }  
+    }
 }
+
 .popular__courses {
     padding: 60px 0;
 
@@ -331,10 +334,12 @@ body {
 .scroll-block {
     min-width: 240px;
 }
+
 .scroll-parent {
     width: 100%;
     height: 100%;
     overflow: hidden;
+
     .scroll-child {
         height: 100%;
         // width: calc(100% + 40px);
@@ -344,13 +349,16 @@ body {
         // padding: 40px;
     }
 }
+
 .filter__block {
+
     &.collapse,
     &.collapsing {
         max-height: 0px;
         opacity: 0;
         transition: 0.3s;
     }
+
     // &.collapsed,
     &.show {
         max-height: 400vh;
@@ -359,15 +367,46 @@ body {
 
     }
 }
+
 .filter__place {
     .filter-a {
         padding: 10px 15px;
         @extend .helvetica-55;
+
         &.active {
             color: #424242;
             background-color: #F3F3F4;
             border-radius: 10px;
             @extend .helvetica-75;
+        }
+    }
+}
+
+.sale__overlay {
+    width: calc(100% - 30px);
+
+}
+
+.master-class {
+    .block {
+
+        .sale__overlay {
+            z-index: 11;
+            opacity: 0;
+            visibility: hidden;
+            transition: 0.3s;
+        }
+
+        &.sale {
+            .sale__overlay {
+                z-index: 11;
+                opacity: 1;
+                visibility: visible;
+                transition: 0.3s;
+                img {
+                    max-width: 280px;
+                }
+            }
         }
     }
 }
