--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -414,3 +414,12 @@ body {
         }
     }
 }
+.prizes {
+    .number {
+        width: 75px;
+        min-width: 75px;
+        height: 74px;
+        height: 74px;
+        border-radius: 50%;
+    }
+}
