--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -51,7 +51,9 @@ $theme-colors: ( //   "brown": $brown,
     // 'violet': $violet,
 
 );
-$number_varriables:('5' : 5px,
+$number_varriables:(
+    '5' : 5px,
+    '8': 8px,
     '10': 10px,
     '11': 11px,
     '12': 12px,
@@ -63,6 +65,7 @@ $number_varriables:('5' : 5px,
     '20': 20px,
     '23': 23px,
     '24': 24px,
+    '28': 28px,
     '30': 30px,
     '35': 35px,
     '40': 40px,
