vlog mobile web

--- a/test-scss/scss/page/responsive.scss
+++ b/test-scss/scss/page/responsive.scss
@@ -22,4 +22,10 @@
     .f-30 {
         font-size: 24px !important;
     }
+    .f-24 {
+        font-size: 16px !important;
+    }
+    .f-16 {
+        font-size: 14px !important;
+    }
 }
