--- a/test-scss/scss/base.scss
+++ b/test-scss/scss/base.scss
@@ -53,6 +53,13 @@
 	margin: 0 auto;
 	display: block;
 }
+.scroll-center {
+	width: 100%;
+	max-width: 1033px;
+	padding: 0 15px;
+	margin: 0 auto;
+	display: block;
+}
 // .justify-center {
 // 	justify-content: center;
 // }
