--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -42,14 +42,17 @@ body {
     height: 80px;
     width: 100%;
     border-bottom: 1px solid $border;
+
     .header__block {
         &.center {
             max-width: 1280px;
         }
     }
 }
+
 .nav-header {
     height: 80px;
+
     .list {
         .nav__a {
             display: flex;
@@ -58,6 +61,12 @@ body {
             text-decoration: none;
             cursor: pointer;
             height: 80px;
+            font-size: 14px;
+
+            .drop__icon {
+                transform: rotate(-90deg);
+                transition: 0.3s;
+            }
 
             &:after {
                 background: none repeat scroll 0 0 transparent;
@@ -72,12 +81,24 @@ body {
                 width: 0;
             }
 
-            &:hover:after {
-                width: 100%;
-                left: 0;
+            &:hover {
+                .drop__icon {
+                    .path {
+                        fill: $blue;
+                        transition: 0.3s;
+                    }
+                }
+
+                &:after {
+                    width: 100%;
+                    left: 0;
+                }
+            }
+
+            &.active {
+                color: $black;
             }
         }
-
     }
 
     .right_ul {
@@ -134,7 +155,7 @@ body {
     .mail__input {
         border: 1px solid #E0E0E0;
         height: 40px;
-        border-radius: 10px;
+        border-radius: 8px;
         padding-left: 15px;
         padding-right: 35px;
     }
@@ -154,7 +175,7 @@ body {
         .block {
             height: 160px;
             border: 1px solid $border;
-            border-radius: 10px;
+            border-radius: 8px;
 
             img {
                 max-width: 80%;
@@ -169,7 +190,7 @@ body {
 
     .block {
         .inside__block {
-            border-radius: 10px;
+            border-radius: 8px;
             box-shadow: 1px 3px 8px 6px rgba(0, 0, 0, .14);
         }
     }
@@ -255,14 +276,14 @@ body {
 
         .block {
             background-color: #F5F5F5;
-            border-radius: 10px;
+            border-radius: 8px;
             max-width: 340px;
             transition: 0.3s;
 
             &:hover {
                 background-color: $white;
                 transform: scale(1.07);
-                box-shadow: 1px 1px 6px 3px rgba(0,0,0,0.14);
+                box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.14);
                 transition: 0.3s;
 
                 span {
@@ -281,7 +302,7 @@ body {
 
         &:hover {
             transform: scale(1.07);
-            box-shadow: 1px 1px 6px 3px rgba(0,0,0,0.14);
+            box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.14);
             transition: 0.3s;
         }
     }
@@ -294,32 +315,6 @@ body {
     .card-header {
         background-color: initial !important;
         border: none !important;
-
-        // .btn {
-        //     &::after {
-        //         width: 40px;
-        //         content: '';
-        //         position: absolute;
-        //         height: 40px;
-        //         appearance: none;
-        //         // background-color: red;
-        //         background-image: url('../../img/Path.svg');
-        //         background-position: right 50%;
-        //         background-repeat: no-repeat;
-        //         top: 0;
-        //         right: 20px;
-        //         transform: translate(-50%, -50%);
-        //         transition: 0.3s;
-        //         z-index: 100;
-        //     }
-
-        //     &.collapsed {
-        //         &::after {
-        //             transform: translate(-50%, -50%) rotate(180deg);
-        //             transition: 0.3s;
-        //         }
-        //     }
-        // }
     }
 }
 
@@ -380,7 +375,7 @@ body {
         &.active {
             color: #424242;
             background-color: #F3F3F4;
-            border-radius: 10px;
+            border-radius: 8px;
             @extend .helvetica-75;
         }
     }
@@ -407,6 +402,7 @@ body {
                 opacity: 1;
                 visibility: visible;
                 transition: 0.3s;
+
                 img {
                     max-width: 280px;
                 }
@@ -414,6 +410,7 @@ body {
         }
     }
 }
+
 .prizes {
     .number {
         width: 75px;
@@ -423,8 +420,63 @@ body {
         border-radius: 50%;
     }
 }
+
 .search-row {
     transform: rotate(180deg);
     right: 0;
     top: 13px;
+}
+
+.numbering-cart {
+    position: absolute;
+    background-color: #FF5D31;
+    border-radius: 50%;
+    font-size: 10px;
+    width: 13px;
+    height: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: -5px;
+    top: -3px;
+}
+
+.home_blocks {
+    .block {
+        .down__side {
+            transition: 0.3s;
+        }
+
+        &:hover {
+
+            // transform: translateY(-20px);
+            // background-color: red;
+            .down__side {
+                transition: 0.3s;
+                // min-height: 355px;
+                padding-top: 30px !important;
+                padding-bottom: 30px !important;
+            }
+        }
+    }
+}
+
+.f-14 {
+    line-height: 20px;
+}
+
+.f-16 {
+    line-height: 19px;
+}
+
+.f-20 {
+    line-height: 24px;
+}
+
+.f-30 {
+    line-height: 40px;
+}
+
+.f-40 {
+    line-height: 53px;
 }
