--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -196,6 +196,21 @@ body {
     }
 }
 
+.like__remove {
+    position: relative;
+    color: $light-text;
+
+    &::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 1px;
+        background-color: $light-text;
+        top: 50%;
+        left: 0;
+    }
+}
+
 .popular__courses {
     padding: 60px 0;
 
@@ -223,21 +238,6 @@ body {
                 .bottom {
                     .left__side {
                         border-left: 5px solid $blue;
-
-                        .like__remove {
-                            position: relative;
-                            color: $light-text;
-
-                            &::after {
-                                position: absolute;
-                                content: '';
-                                width: 100%;
-                                height: 1px;
-                                background-color: $light-text;
-                                top: 50%;
-                                left: 0;
-                            }
-                        }
                     }
                 }
             }
@@ -444,12 +444,14 @@ body {
 .home_blocks {
     .block {
         padding-top: 30px;
+
         .down__side {
             transition: 0.3s;
         }
 
         &:hover {
             padding-top: 0px;
+
             // transform: translateY(-20px);
             // background-color: red;
             .down__side {
@@ -480,4 +482,259 @@ body {
 
 .f-40 {
     line-height: 53px;
+}
+
+.teams__section {
+    .team-block {
+        box-shadow: 1px 3px 8px 6px rgba(0, 0, 0, .14);
+
+        .block {
+            position: relative;
+
+            &:not(:last-child) {
+                &::after {
+                    position: absolute;
+                    height: 50%;
+                    width: 2px;
+                    background-color: $border;
+                    content: '';
+                    right: -1px;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                }
+            }
+        }
+
+        &.active {
+            display: flex;
+        }
+    }
+}
+
+.design__section {
+    .left__side {
+        min-height: 447px;
+        max-height: 447px;
+
+        .blocks {
+            position: absolute;
+        }
+
+        .block_1 {
+            z-index: 10;
+            left: 8%;
+            top: 0;
+            width: 40%;
+        }
+
+        .block_2 {
+            z-index: 10;
+            top: 20px;
+            right: 8%;
+            width: 40%;
+        }
+
+        .block_3 {
+            z-index: 20;
+            top: 70px;
+            left: 40%;
+            transform: translateX(-50%);
+            width: 40%;
+        }
+
+        .block_4 {
+            z-index: 10;
+            bottom: 40px;
+            left: 0;
+            width: 40%;
+        }
+
+        .block_5 {
+            z-index: 15;
+            bottom: 0;
+            left: 58%;
+            transform: translateX(-50%);
+            width: 60%;
+        }
+    }
+}
+
+.course2_finish {
+    position: relative;
+
+    &::after {
+        position: absolute;
+        background-image: linear-gradient(to right, $white, transparent, white);
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        content: '';
+        pointer-events: none;
+    }
+}
+
+.course_2-block {
+
+    // position: relative;
+    .coure_2 {
+        background-image: url(../img/academyc.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        min-height: 210px;
+        cursor: pointer;
+
+        p {
+            opacity: 0;
+            transition: 0.3s;
+        }
+
+        &:hover {
+            p {
+                opacity: 1;
+                transition: 0.3s;
+            }
+        }
+    }
+
+}
+
+.bdr {
+    .row-left {
+        background-image: url('../img/back.svg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        width: 15px;
+        height: 30px;
+        content: '';
+        position: absolute;
+        top: 55%;
+        right: 30px;
+        transform: translateY(50%) rotate(180deg);
+        cursor: pointer;
+        z-index: 111;
+    }
+
+    .row-right {
+        background-image: url('../img/back.svg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        width: 15px;
+        height: 30px;
+        content: '';
+        position: absolute;
+        top: 55%;
+        left: 30px;
+        transform: translateY(50%);
+        cursor: pointer;
+        z-index: 111;
+    }
+
+    &.stay__home {
+
+        .row-left,
+        .row-right {
+            top: 50% !important;
+        }
+
+        .row-right {
+            transform: translateY(-50%);
+
+        }
+
+        .row-left {
+            transform: translateY(-50%) rotate(180deg);
+
+        }
+    }
+}
+
+.offers__section {
+    .block {
+        position: relative;
+        box-shadow: 1px 3px 8px 6px rgba(0, 0, 0, .14);
+        max-width: 530px;
+        width: 100%;
+
+        .bottom__img {
+            position: absolute;
+            left: 50%;
+            bottom: -58px;
+            transform: translateX(-50%);
+            z-index: 40;
+        }
+    }
+}
+
+.slider-section {
+    display: flex;
+    align-items: center;
+    padding: 30px 0 18px 0;
+
+    .ball {
+        background-color: #A6A7AC;
+        width: 7px;
+        height: 7px;
+        margin: 0 9px;
+        border-radius: 50%;
+
+        &.active {
+            background-color: #6595FF;
+            width: 10px;
+            height: 10px;
+        }
+    }
+}
+
+.cart-menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    // height: calc(100vh - 80px);
+    max-width: 0px;
+    transition: 0.3s;
+    background-color: initial;
+    z-index: 1000;
+
+    &.active {
+        max-width: 100%;
+        overflow: visible;
+        transition: 0.3s;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .cart-aside {
+        width: 100%;
+        max-width: 380px;
+        height: 100%;
+        background-color: #F5F9FF;
+        overflow: auto;
+        .cart__body {
+            height: 98%;
+
+            .block {
+                height: 155px;
+            }
+        }
+    }
+}
+
+.text__c {
+    border-width: 4px;
+    border-right-style: solid;
+}
+
+.scroll__overlay {
+    width: 100%;
+    height: 17px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block !important;
 }
