--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -10,6 +10,8 @@ $banner-color: #F5F9FF;
 $green : #37B34A;
 $light-text: #9E9E9E;
 $dark-text: #808080;
+$dark-blue: #6595FF;
+$light-blue:#22AAFF;
 
 // $dark-green : #1e4e4b;
 // $green-text : #1bd3a0;
@@ -42,6 +44,8 @@ $theme-colors: ( //   "brown": $brown,
     'green': $green,
     'light-text': $light-text,
     'dark-text': $dark-text,
+    'dark-blue': $dark-blue,
+    'light-blue': $light-blue,
 
 
     // 'dark-red': $dark-red,
@@ -93,6 +97,12 @@ $value in $theme-colors {
 $value in $theme-colors {
     .c-#{$key} {
         color: $value;
+    }
+}
+@each $key,
+$value in $theme-colors {
+    .br-c-#{$key} {
+        border-color: $value;
     }
 }
 
@@ -296,17 +306,18 @@ a {
         padding-left: 40px;
         padding-right: 15px;
         transition: 0.3s;
-
+        color: $light-text;
         &:hover {
             transition: 0.3s;
             border: 4px solid #EFF4FF;
+            background-color: white;
 
         }
 
         &:focus {
             transition: 0.3s;
             border: 4px solid #EFF4FF;
-
+            background-color: white;
             color: $black;
         }
 
