--- a/test-scss/scss/style.scss
+++ b/test-scss/scss/style.scss
@@ -8,6 +8,6 @@
 @import './checkbox.scss';
 @import 'page/responsive.scss';
 @import 'page/burger.scss';
-* {
-    outline: none !important;
-}
+@import './variables/buttons';
+@import './variables/dropdowns';
+@import './variables/inputs';
