--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -74,11 +74,12 @@ body {
                 content: "";
                 display: block;
                 height: 2px;
-                left: 50%;
+                left: 0;
+                opacity: 0;
                 position: absolute;
                 background: $blue;
                 transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                width: 0;
+                width: 100%;
             }
 
             &:hover {
@@ -90,13 +91,15 @@ body {
                 }
 
                 &:after {
-                    width: 100%;
-                    left: 0;
+                    opacity: 1;
+                    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+
                 }
             }
 
             &.active {
                 color: $black;
+
                 &:hover {
                     color: $blue;
                 }
@@ -282,8 +285,9 @@ body {
             border-radius: 8px;
             max-width: 340px;
             transition: 0.3s;
-
-            &:hover {
+            &:nth-child(2) {
+                margin: 0 10px;
+                
                 background-color: $white;
                 transform: scale(1.07);
                 box-shadow: 0px 0px 10px #0000001A;
@@ -447,10 +451,12 @@ body {
 .home_blocks {
     .block {
         transition: 0.3s;
+
         &:hover {
             transition: 0.3s;
             transform: scale(1.05);
         }
+
         // padding-top: 30px;
 
         // .down__side {
@@ -725,6 +731,7 @@ body {
         height: 100%;
         background-color: #F5F9FF;
         overflow: auto;
+
         .cart__body {
             height: calc(100% - 24px);
 
@@ -749,13 +756,16 @@ body {
     display: block !important;
     z-index: 9999;
 }
+
 .modal-section {
     max-width: 700px !important;
 }
+
 .indicators {
-    .childs{
+    .childs {
         min-height: 160px;
     }
+
     .rows {
         background: rgba(0, 0, 0, 0.8);
         height: 100%;
@@ -765,36 +775,43 @@ body {
         align-items: center;
         justify-content: center;
     }
+
     .row-right {
         top: 0;
         right: 0;
     }
+
     .row-left {
         top: 0;
         left: 0;
     }
 }
+
 .background {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .carousel-item {
     .childs {
         height: 500px;
         background-size: 100% !important;
     }
 }
+
 .work-items {
     .block {
         box-shadow: 0px 0px 10px #0000001A;
 
     }
 }
+
 .lector {
     .img-block {
         border-radius: 50%;
     }
+
     .fade:not(.show) {
         opacity: 0;
         display: none !important;
