--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -12,6 +12,7 @@ $light-text: #9E9E9E;
 $dark-text: #808080;
 $dark-blue: #6595FF;
 $light-blue:#22AAFF;
+$card-text:#4C4C4C;
 
 // $dark-green : #1e4e4b;
 // $green-text : #1bd3a0;
@@ -46,6 +47,7 @@ $theme-colors: ( //   "brown": $brown,
     'dark-text': $dark-text,
     'dark-blue': $dark-blue,
     'light-blue': $light-blue,
+    'card-text': $card-text
 
 
     // 'dark-red': $dark-red,
